--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+.form-container {
+  margin: 0 auto;
+  border: 1px solid black;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  width: 30em;
+  height: 20em;
   text-align: center;
+  border-radius: 1em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-inputs {
+  margin: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-header {
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  padding-top: 0.5em;
+  margin: 0 0 1em;
+  background-color: black;
+  color: rgb(179, 231, 245);
+  height: 2em;
 }
